# webhook-conversation

./: .devcontainer.json  .gitignore  .releaserc  README.md  hacs.json  pyproject.toml
.github/workflows/: quality.yml
config/: configuration.yaml
custom_components/n8n_conversation/: ai_task.py  entity.py  models.py
custom_components/webhook_conversation/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  entity.py  manifest.json  models.py  strings.json  tts.py
custom_components/webhook_conversation/translations/: en.json
examples/: simple_n8n_workflow.json
media/: icon.xcf
