[project]
name = "webhook-conversation"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
keywords = [
    "homeassistant",
    "integration",
    "custom-component",
    "conversation",
    "voice-assistant",
    "webhook",
    "n8n",
    "webhook-conversation",
    "home-assistant",
    "home-assistant-custom-component",
    "home-assistant-integration",
    "home-assistant-integration",
]
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
description = "A custom component for Home Assistant to use webhooks for conversation and AI features."
readme = "README.md"
requires-python = ">=3.13.2"
version = "0.0.0"
dependencies = ["homeassistant>=2025.8.0"]

[project.urls]
Repository = "https://github.com/eulemitkeule/webhook-conversation"
Documentation = "https://github.com/eulemitkeule/webhook-conversation/blob/master/README.md"
Changelog = "https://github.com/EuleMitKeule/webhook-conversation/releases"
Issues = "https://github.com/eulemitkeule/webhook-conversation/issues"

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.9"]

[[tool.mypy.overrides]]
module = ["voluptuous_openapi.*"]
follow_untyped_imports = true
